fix(nav): mobile menu doesn't open on safari mobile

--- a/src/styles/layout/header.css
+++ b/src/styles/layout/header.css
@@ -56,8 +56,8 @@
 	}
 	& .pause {
 		position: absolute;
-		inset-inline-end: 0.5rem;
-		inset-block-start: 5rem;
+		inset-inline-end: max(1vi, 1rem);
+		inset-block-start: calc(var(--font-size-m) * 1.3 + 2rem + var(--spacing-l));
 		z-index: 1;
 		cursor: pointer;
 
